# blackbird

./: Cargo.toml  README.md
src/: cli.rs  main.rs  util.rs
src/blackbird/: mod.rs
src/blackbird/data/: bb_data.rs  bb_edge.rs  bb_flipper.rs  bb_tour.rs  mod.rs
src/blackbird/heuristic/: breadth.rs  kick.rs  main_heuristic.rs  mod.rs  ordering.rs  sparse_edge_map.rs
src/blackbird/initial_tour/: boruvka.rs  create.rs  method.rs  mod.rs  quick_boruvka.rs  random.rs
src/blackbird/kd/: kd_node.rs  kd_tree.rs  mod.rs
src/tsp_lib/: data.rs  distance.rs  mod.rs  node.rs  reader.rs
