[package]
name = "blackbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
kd-tree = "0.5.1"
ordered-float = "3.7.0"
typenum = "1.16.0"
rand = "0.8.5"
rand_seeder = "0.2.3"